DH: fix style menu on iphone

--- a/wp-content/themes/denholm/scss/base/_helpers.scss
+++ b/wp-content/themes/denholm/scss/base/_helpers.scss
@@ -281,6 +281,7 @@
 
 .overflow-hidden {
   overflow: hidden;
-  position: absolute;
+  position: relative;
   height: 100%;
+  width: 100%;
 }
