--- a/wp-content/themes/denholm/scss/components/_page-transition.scss
+++ b/wp-content/themes/denholm/scss/components/_page-transition.scss
@@ -422,7 +422,7 @@
 
   &__menu {
     @include susy-media(mobileOnly) {
-      position: absolute;
+      position: fixed;
       left: 0;
       right: 0;
       bottom: 0;
